; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_time-util.c_localtime_or_gmtime_r.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_time-util.c_localtime_or_gmtime_r.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.tm* @localtime_or_gmtime_r(i32* %0, %struct.tm* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.tm*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store %struct.tm* %1, %struct.tm** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %3
  %10 = load i32*, i32** %4, align 8
  %11 = load %struct.tm*, %struct.tm** %5, align 8
  %12 = call %struct.tm* @gmtime_r(i32* %10, %struct.tm* %11)
  br label %17

13:                                               ; preds = %3
  %14 = load i32*, i32** %4, align 8
  %15 = load %struct.tm*, %struct.tm** %5, align 8
  %16 = call %struct.tm* @localtime_r(i32* %14, %struct.tm* %15)
  br label %17

17:                                               ; preds = %13, %9
  %18 = phi %struct.tm* [ %12, %9 ], [ %16, %13 ]
  ret %struct.tm* %18
}

declare dso_local %struct.tm* @gmtime_r(i32*, %struct.tm*) #1

declare dso_local %struct.tm* @localtime_r(i32*, %struct.tm*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
